<resources>
    <string name="app_name">EasyWriter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="conversations">Conversations</string>
    <string name="newConversation">New Conversation</string>
    <string name="selectContact">Select contact</string>
    <string name="conversation_history">Conversation</string>
    <string name="conversation">Conversation</string>
    <string name="back">Back</string>
    <string name="newmessage">New Message</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="drawprompt">Write here =)</string>
    <string name="sendmessage">Send</string>
    <string name="clear">Clear</string>
    <string name="backspace">Backspace</string>
    <string name="swipeLeftPrompt">&lt; x</string>
    <string name="swipeRightPrompt">\u2713 &gt;</string>
    <string name="title_activity_conversation_display">ConversationDisplay</string>
    <string name="title_activity_new_conversation">New Conversation</string>
    <string name="SendMessagePrompt">Send</string>
    <string name="acceptletter">Ok</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</string>
    <string name="noconversationsmessage">No conversations yet =(</string>
    <string name="whitespaceprompt">[SPACE]</string>
    <string name="loadingprompt">Loading...</string>
    <string name="typeprompt">Touch to start drawing</string>

</resources>
