<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RV.conversation1"
    tools:context=".Conversations">

    <TextView android:text="@string/conversations"
        style="@style/tv.conversations"
        android:id="@+id/stat_tvConversations" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/lvConversationDisplay"
        android:layout_below="@+id/stat_tvConversations"
        android:layout_above="@+id/btnNewConversation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/noconversationsmessage"
        android:id="@+id/tvNoConversationMessage"
        android:layout_alignTop="@+id/lvConversationDisplay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="gone" />

    <Button
        style="@style/btn.New"
        android:text="@string/newConversation"
        android:id="@+id/btnNewConversation" />

</RelativeLayout>
