<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kargathia.easywriter.NewMessage">

    <TextView android:text="to: Name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRecipientName"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scvMessageView"
        android:layout_below="@+id/tvRecipientName"
        android:layout_above="@+id/btnBack">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tfMessage" />
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btnBack"
        android:layout_above="@+id/stat_tvDrawPrompt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendmessage"
        android:id="@+id/btnSend"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/scvMessageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawprompt"
        android:id="@+id/stat_tvDrawPrompt"
        android:layout_above="@+id/ivDrawDisplay" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/ivDrawDisplay"
        android:layout_above="@+id/btnAcceptLetter"
        android:layout_toLeftOf="@+id/btnBackspace" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backspace"
        android:id="@+id/btnBackspace"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/btnClear" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnClear"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/btnAcceptLetter"
        android:layout_alignLeft="@+id/btnBackspace" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="accept letter"
        android:id="@+id/btnAcceptLetter"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
